<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019 The Android Open Source Project
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/rotateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:text="@string/rotate"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/translateButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/translateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:text="@string/translate"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/scaleButton"
        app:layout_constraintStart_toEndOf="@+id/rotateButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/scaleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:layout_marginStart="15dp"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/scale"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/sequentialButton"
        app:layout_constraintStart_toEndOf="@+id/translateButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sequentialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:layout_marginStart="15dp"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/fade"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scaleButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/showerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/standard_margin"
        android:text="@string/shower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/scaleButton"
        app:layout_constraintTop_toBottomOf="@+id/rotateButton" />

    <Button
        android:id="@+id/colorizeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/standard_margin"
        android:text="@string/sky_color"
        app:layout_constraintEnd_toEndOf="@+id/translateButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rotateButton" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showerButton"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_star" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>